unpackaged/main/default/objects/ffct__MigrationSet__c/fields/ffct__BundleJob__c.field-meta.xml
<CustomField>
    <fullName>ffct__BundleJob__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds the reference to the Bundle Job created for migration.</description>
    <label>Bundle Job</label>
    <referenceTo>ffct__BundleJob__c</referenceTo>
    <relationshipLabel>Migration Sets</relationshipLabel>
    <relationshipName>MigrationSets</relationshipName>
    <type>Lookup</type>
</CustomField>