unpackaged/main/default/objects/ffct__MigrationSet__c/fields/ffct__EndDate__c.field-meta.xml
<CustomField>
    <fullName>ffct__EndDate__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>Holds the date till which the migration changes will be captured.</description>
    <inlineHelpText>The date till which the migration changes will be captured.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>