unpackaged/main/default/objects/ffct__MigrationSet__c/fields/ffct__ExcludeUnmanagedItems__c.field-meta.xml
<CustomField>
    <fullName>ffct__ExcludeUnmanagedItems__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, this migration set will not include changes for unmanaged entities in the org. Records for unmanaged objects or standard objects, and unmanaged metadata, will not be included.</inlineHelpText>
    <label>Exclude Unmanaged and Standard Items</label>
    <type>Checkbox</type>
</CustomField>