unpackaged/main/default/objects/ffct__MigrationSet__c/fields/ffct__StartDate__c.field-meta.xml
<CustomField>
    <fullName>ffct__StartDate__c</fullName>
    <description>Holds the date from which the migration changes will be captured.</description>
    <inlineHelpText>The date from which the migration changes will be captured.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>