unpackaged/main/default/objects/ffct__MigrationSet__c/fields/ffct__Status__c.field-meta.xml
<CustomField>
    <fullName>ffct__Status__c</fullName>
    <description>Holds the status of operations performed on MigrationSet</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Prepared</fullName>
            </value>
            <value>
                <fullName>Bundled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>