unpackaged/main/default/objects/ffct__MigrationSet__c/fields/ffct__TotalNumberOfMetadataMigrations__c.field-meta.xml
<CustomField>
    <fullName>ffct__TotalNumberOfMetadataMigrations__c</fullName>
    <description>It will show the total count of Metadata Migrations in Migration Set</description>
    <label>Total number of metadata items</label>
    <summaryForeignKey>ffct__MetadataMigration__c.ffct__MigrationSet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>