unpackaged/main/default/objects/ffct__MigrationSet__c/fields/ffct__TotalNumberOfRecordMigrations__c.field-meta.xml
<CustomField>
    <fullName>ffct__TotalNumberOfRecordMigrations__c</fullName>
    <description>It will show the total count of Record Migrations in Migration Set</description>
    <label>Total number of records</label>
    <summaryForeignKey>ffct__RecordMigration__c.ffct__MigrationSet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>