unpackaged/main/default/objects/ffct__MigrationSet__c/validationRules/ffct__EndDateShouldBeLessThanCurrentTime.validationRule-meta.xml
<ValidationRule>
    <fullName>ffct__EndDateShouldBeLessThanCurrentTime</fullName>
    <active>true</active>
    <description>The end date should be less than current time</description>
    <errorConditionFormula>ffct__EndDate__c  &gt;  NOW()</errorConditionFormula>
    <errorDisplayField>ffct__EndDate__c</errorDisplayField>
    <errorMessage>The End Date must be earlier than the current time.</errorMessage>
</ValidationRule>