unpackaged/main/default/objects/ffct__MigrationSet__c/validationRules/ffct__StartDateShouldBeLessThanCurrentDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ffct__StartDateShouldBeLessThanCurrentDate</fullName>
    <active>true</active>
    <description>The start date should be less than current Time</description>
    <errorConditionFormula>ffct__StartDate__c   &gt;    NOW()</errorConditionFormula>
    <errorDisplayField>ffct__StartDate__c</errorDisplayField>
    <errorMessage>The Start Date must be earlier than the current time.</errorMessage>
</ValidationRule>