unpackaged/main/default/objects/ffct__MigrationSet__c/validationRules/ffct__StartDateShouldBeLessThanEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ffct__StartDateShouldBeLessThanEndDate</fullName>
    <active>true</active>
    <description>The start date should be less end date.</description>
    <errorConditionFormula>ffct__StartDate__c   &gt;   ffct__EndDate__c</errorConditionFormula>
    <errorDisplayField>ffct__StartDate__c</errorDisplayField>
    <errorMessage>The End Date must be later than the Start Date.</errorMessage>
</ValidationRule>